--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
   <div class="container">
     <nav class="js-mega-menu navbar-nav-wrap">
       <!-- Default Logo -->
-      <a class="navbar-brand" href="./index.html" aria-label="Unify">
+      <a class="navbar-brand" href="./" aria-label="Unify">
         <img class="navbar-brand-logo" src="./assets/svg/logos/logo.svg" alt="Image Description">
       </a>
       <!-- End Default Logo -->
@@ -255,7 +255,7 @@
     </nav>
   </div>
 
-  <div class="container-md">
+  <div class="container mx-0 px-0" style="max-width: 100%;">
     <main id="content" role="main">
       <!-- Hero -->
       
